# schema

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  AGENTS.md  CMakeLists.txt  Cargo.toml  Justfile  LICENSE  README.md  build.rs  conandata.yml  conanfile.py
.github/actions/setup-conan-whs31/: action.yml
.github/actions/setup-rust-whs31/: action.yml
.github/workflows/: ci.yml
LEGACY/: CMakeLists.txt  Justfile  conanfile.py
LEGACY/.cargo/: config.toml
LEGACY/.github/workflows/: ci.yml
LEGACY/cmake/: GenerateProtobufs.cmake
LEGACY/share/proto/quasar/: dim2.proto  dim3.proto  euler_angles.proto  image.proto  latlon.proto  uuid.proto
LEGACY/share/proto/quasar/relay/datagrams/: shell.proto  status.proto
LEGACY/share/proto/quasar/relay/diagnostics/: diagnostics.proto
LEGACY/share/proto/quasar/relay/services/: license.proto  nav.proto  shell.proto  status.proto
LEGACY/src/: lib.rs  util.rs
LEGACY/src/types/: dim2.rs  dim3.rs  euler_angles.rs  latlon.rs  mod.rs  uuid.rs
LEGACY/typescript/: BoardInfo.ts  Cpu.ts  Dim2.ts  Dim2F.ts  Dim3.ts  Dim3F.ts  EulerAngles.ts  ExecuteShellRequest.ts  ExecutionPolicy.ts  ExecutionResult.ts  File.ts  ImageMetadata.ts  ImageType.ts  NavigationSource.ts  SetSourceRequest.ts  SockAddr.ts  Telemetry.ts  TelemetryRecord.ts  TelemetryRequest.ts  Timestamp.ts  Uuid.ts  WorkingDirectory.ts
docs/: zmq.md
schema/quasar/: args.proto  error.proto  image.proto  nav.proto  power_switch.proto  route.proto  sar.proto  status.proto  zmq.proto
share/proto/quasar/: args.proto  image.proto
share/proto/quasar/relay/datagrams/: nav.proto
src/: lib.rs
typescript/: Artifact.ts  Disk.ts  ExecuteShellResponse.ts  ExecutionArtifactType.ts  ExitStatus.ts  FixType.ts  Image.ts  LatLon.ts  MemoryInfo.ts  NetworkDiagnostics.ts  SystemInfo.ts  SystemTelemetry.ts  SystemTelemetryResponse.ts  Tarball.ts  TelemetryResponse.ts
