[package]
name = "quasar_schema"
version = "1.0.1"
edition = "2024"
authors = ["whs31 <whs31@github.io>"]
keywords = ["protocol", "network", "uav", "protobuf"]
license = "MIT OR Apache-2.0"

[lib]
doctest = false

[features]
default = []
serde = ["dep:serde", "wkt", "mms_protocol/serde"]
legacy = ["mms_protocol/legacy"]
wkt = []
vendored-protobuf = ["dep:protobuf-src", "mms_protocol/vendored-protobuf"]


[dependencies]
mms_protocol = { version = "3.0.10", registry = "whs31" }

prost = { version = "0.14", features = ["default"] }
prost-types = { version = "0.14", features = ["chrono"] }

serde = { version = "1.0", features = ["derive"], optional = true }

[build-dependencies]
prost-build = "0.14"
protobuf-src = { version = "2", optional = true }
mms_protocol = { version = "3.0.1", registry = "whs31" }